tests/spec/emit/snapshots/alias_free_target_keeps_compound_assign_with_call_rhs.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn pure_add(a: int) -> int { a + 100 }
  
  fn run() -> int {
    let mut x = 5
    x += pure_add(1)
    x
  }
---
package main

func pureAdd(a int) int {
	return a + 100
}

func run() int {
	x := 5
	x += pureAdd(1)
	return x
}
