tests/spec/emit/snapshots/alias_partial_impl_ufcs_call.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Pair<A, B> { a: A, b: B }
  
  impl<T> Pair<T, T> {
    fn first(self) -> T { self.a }
  }
  
  type IntPair = Pair<int, int>
  
  fn test() -> int {
    let p: IntPair = Pair { a: 1, b: 2 };
    p.first()
  }
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_first[T any](self Pair[T, T]) T {
	return self.a
}

type IntPair = Pair[int, int]

func test() int {
	p := Pair[int, int]{
		a: 1,
		b: 2,
	}
	return Pair_first(p)
}
