tests/spec/emit/snapshots/aliased_go_import_preserved_for_unused_type.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport s \"go:sync\"\n\nstruct Wrapper {\n  mu: s.Mutex,\n}\n\nfn main() {}\n"
---
package main

import s "sync"

type Wrapper struct {
	mu s.Mutex
}

func main() {}
